[project]
name = "football-ui"
version = "0.1.0"
description = "Football match prediction UI backend"
requires-python = ">=3.10, <3.13"

dependencies = [
  "flask",
  "flask-cors",
  "pandas",
  "numpy",
  "scikit-learn",
  "neural-network-notebooks",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
neural-network-notebooks = { path = "../football-predictor", editable = true }
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
